k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudnative-devopslab
  namespace: devopslab
  labels:
    app: cloudnative-devopslab
spec:
  type: NodePort
  selector:
    app: cloudnative-devopslab
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
