k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudnative-devopslab
  namespace: devopslab
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: devopslab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudnative-devopslab
                port:
                  number: 80
